[package]
name = "toml2json"
description = "Convert TOML to JSON"
license = "MIT"
version = "1.3.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
homepage = "https://github.com/woodruffw/toml2json"
readme = "README.md"
keywords = ["cli", "toml", "json"]
categories = ["command-line-utilities", "development-tools", "encoding"]

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions

[dependencies]
anyhow = "1.0"
clap = "3.2.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.9"
