[package]
name = "toml2json"
description = "Convert TOML to JSON"
license = "MIT"
version = "1.3.1"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
homepage = "https://github.com/woodruffw/toml2json"
readme = "README.md"
keywords = ["cli", "toml", "json"]
categories = ["command-line-utilities", "development-tools", "encoding"]
rust-version = "1.64"

[package.metadata.release]
publish = false # handled by GitHub Actions
push = true

[dependencies]
anyhow = "1.0"
clap = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
