[package]
name = "toml2json"
description = "Convert TOML to JSON"
license = "MIT"
version = "1.4.1-rc1"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2021"
homepage = "https://github.com/woodruffw/toml2json"
readme = "README.md"
keywords = ["cli", "toml", "json"]
categories = ["command-line-utilities", "development-tools", "encoding"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[profile.release]
lto = true
