[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# NOTE: This section is a stub; needed to prevent
# `uv run --only-group docs` from failing.
[project]
name = "toml2json"
dynamic = ["version", "readme"]
# Arbitrarily set to the oldest non-EOL Python.
requires-python = ">=3.9"

[tool.maturin]
bindings = "bin"
